<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/dtljdl"
        android:layout_marginTop="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/namacustemer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail"
        android:text="@string/nama"
        android:layout_marginTop="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/alamattoko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/namacustemer"
        android:text="@string/alamat"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/menuorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alamattoko"
        android:text="@string/menu_order"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/pengiriman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuorder"
        android:text="@string/dtljdl"
        android:layout_marginTop="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <RadioButton
        android:id="@+id/radiobtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pengiriman"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:checked="true"
        android:onClick="onRadioButtonClicked"
        android:text="@string/ambil"
        />
    <RadioButton
        android:id="@+id/radiobtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiobtn1"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:onClick="onRadioButtonClicked"
        android:text="@string/ambil1"
        />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiobtn2"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/btndone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>