<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/icon2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_action_person"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/labeled2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello"
        app:layout_constraintStart_toEndOf="@+id/icon2"
        app:layout_constraintTop_toTopOf="parent"
        android:ems="10"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/pepro"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/pepro_pedas"
        app:layout_constraintStart_toStartOf="@+id/icon2"
        app:layout_constraintTop_toBottomOf="@+id/icon2"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/peprotext1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/peprojdl"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/pepro"
        app:layout_constraintTop_toTopOf="@+id/pepro"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/peprotext2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/peprodesc"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/pepro"
        app:layout_constraintTop_toBottomOf="@+id/peprotext1"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/spageti"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/spageti_pedas"
        app:layout_constraintStart_toStartOf="@+id/pepro"
        app:layout_constraintTop_toBottomOf="@+id/pepro"
        android:layout_marginTop="26dp"
        />
    <TextView
        android:id="@+id/spagetitext1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/spagetijdl"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/spageti"
        app:layout_constraintTop_toTopOf="@+id/spageti"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/spagetitext2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/spagetidesc"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/spageti"
        app:layout_constraintTop_toBottomOf="@+id/spagetitext1"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/petty"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/krebi_petty"
        app:layout_constraintStart_toStartOf="@+id/spageti"
        app:layout_constraintTop_toBottomOf="@+id/spageti"
        android:layout_marginTop="26dp"
        />
    <TextView
        android:id="@+id/pettytext1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pettyjdl"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/petty"
        app:layout_constraintTop_toTopOf="@+id/petty"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/pettytext2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/pettydesc"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/petty"
        app:layout_constraintTop_toBottomOf="@+id/pettytext1"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/beef"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/beef_kentang"
        app:layout_constraintStart_toStartOf="@+id/petty"
        app:layout_constraintTop_toBottomOf="@+id/petty"
        android:layout_marginTop="26dp"
        />
    <TextView
        android:id="@+id/beeftext1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/beefjdl"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/beef"
        app:layout_constraintTop_toTopOf="@+id/beef"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/beeftext2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/beefdesc"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/beef"
        app:layout_constraintTop_toBottomOf="@+id/beeftext1"
        android:textColor="@color/black"
        />



</androidx.constraintlayout.widget.ConstraintLayout>