<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesananActivity">

    <ImageView
        android:id="@+id/pesanan"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:background="@drawable/main_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pesanan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="10dp"
        android:text="@string/harga"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/descpesanan"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/harga"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/decspesanan"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/btn_order"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descpesanan"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="50dp"
        android:text="@string/order"
        />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_order"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="50dp"
        android:text="@string/back"
        />

</androidx.constraintlayout.widget.ConstraintLayout>