<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/pizza"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rm_pizza_"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="56sp"
        />

    <TextView
        android:id="@+id/textstrore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:text="@string/str"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        />

    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textstrore"
        app:layout_constraintTop_toBottomOf="@+id/textstrore"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/inputstore"
        app:layout_constraintStart_toStartOf="@+id/planets_spinner"
        app:layout_constraintTop_toBottomOf="@+id/planets_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/textname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/inputstore"
        app:layout_constraintTop_toBottomOf="@+id/inputstore"
        android:layout_marginTop="26dp"
        android:text="@string/your_name"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/inputname"
        app:layout_constraintStart_toStartOf="@+id/textname"
        app:layout_constraintTop_toBottomOf="@+id/textname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/buttonsubmit"
        app:layout_constraintStart_toStartOf="@+id/inputname"
        app:layout_constraintTop_toBottomOf="@+id/inputname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        />


</androidx.constraintlayout.widget.ConstraintLayout>